# SFML-CS8-Final-Project

./: App_Window.cpp  App_Window.h  Apps.cpp  Apps.h  Background.cpp  Background.h  Font.h  GUI_Component.cpp  GUI_Component.h  HelperClass.h  Icon.h  Interface.cpp  Interface.h  MouseEvents.cpp  MouseEvents.h  README.md  Snapshot.cpp  Snapshot.h  States.cpp  States.h  Wallpaper.h  main.cpp
Computer/: Computer.cpp  Computer.h  ComputerInterface.cpp  ComputerInterface.h
FileTree/: File.cpp  File.h  FileIcons.h  Folder.cpp  Folder.h
MenuBar/: Dropdown_Menu.cpp  Dropdown_Menu.h  Font.h  InputBox.cpp  InputBox.h  Item.cpp  Item.h  ItemList.cpp  ItemList.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h
Notepad/: Notepad.cpp  Notepad.h  NotepadInterface.cpp  NotepadInterface.h
RecycleBin/: RecycleBinInterface.cpp  RecycleBinInterface.h
TextInput/: Cursor.cpp  Cursor.h  History.cpp  History.h  Keyboard_Shortcut.cpp  Keyboard_Shortcut.h  Letter.h  MultiText.cpp  MultiText.h  TextBox.cpp  TextBox.h  TextInput.cpp  TextInput.h  Typing.cpp  Typing.h  TypingSnapshot.h  circle.h
src/: App_Window.cpp  App_Window.h  Apps.cpp  Apps.h  Background.cpp  Background.h  CMakeLists.txt  Font.h  GUI_Component.cpp  GUI_Component.h  HelperClass.h  Icon.h  Interface.cpp  Interface.h  MouseEvents.cpp  MouseEvents.h  Snapshot.cpp  Snapshot.h  States.cpp  States.h  Wallpaper.h  main.cpp
src/Computer/: Computer.cpp  Computer.h  ComputerInterface.cpp  ComputerInterface.h
src/FileTree/: File.cpp  File.h  FileIcons.h  Folder.cpp  Folder.h
src/MenuBar/: Dropdown_Menu.cpp  Dropdown_Menu.h  Font.h  InputBox.cpp  InputBox.h  Item.cpp  Item.h  ItemList.cpp  ItemList.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h
src/Notepad/: Notepad.cpp  Notepad.h  NotepadInterface.cpp  NotepadInterface.h
src/RecycleBin/: RecycleBinInterface.cpp  RecycleBinInterface.h
src/TextInput/: Cursor.cpp  Cursor.h  History.cpp  History.h  Keyboard_Shortcut.cpp  Keyboard_Shortcut.h  Letter.h  MultiText.cpp  MultiText.h  TextBox.cpp  TextBox.h  TextInput.cpp  TextInput.h  Typing.cpp  Typing.h  TypingSnapshot.h  circle.h
